# streaming-lzma

./: stack.yaml  streaming-lzma.cabal
.github/workflows/: haskell-ci.yml
src-tests/: test.hs
src/Streaming/: Lzma.hs
