cabal-version:       1.12
build-type:          Simple
name:                streaming-lzma
version:             0.0.0.0

synopsis:            Streaming interface for LZMA/XZ compression
homepage:            https://github.com/hvr/streaming-lzma
bug-reports:         https://github.com/hvr/streaming-lzma/issues
license:             BSD3
license-file:        LICENSE
author:              Herbert Valerio Riedel
maintainer:          hvr@gnu.org
category:            Codec, Compression, Streaming
tested-with:         GHC == 8.8.4 || == 8.10.7 || == 9.0.2 || == 9.2.8 || == 9.4.8 || == 9.6.4 || == 9.8.1

description:
    This package provides a <http://hackage.haskell.org/package/streaming streaming> API for the <https://en.wikipedia.org/wiki/LZMA LZMA (Lempel–Ziv–Markov chain algorithm)> compression algorithm used in the @.xz@ file format.

source-repository head
  type:     git
  location: https://github.com/hvr/streaming-lzma.git

library
  default-language:    Haskell2010
  other-extensions:    Trustworthy LambdaCase

  hs-source-dirs:      src
  exposed-modules:     Streaming.Lzma

  build-depends:       base                 >= 4.8    && < 4.20
                     , bytestring           >= 0.10.6 && < 0.13
                     , lzma                 == 0.0.*
                     , streaming-bytestring >= 0.1.6  && < 0.4
                     , streaming            == 0.2.*

  ghc-options:         -Wall

test-suite test
  default-language:    Haskell2010
  hs-source-dirs:      src-tests
  main-is:             test.hs
  type:                exitcode-stdio-1.0

  build-depends:       base
                     , bytestring
                     , streaming
                     , streaming-lzma
                     , streaming-bytestring

                     , HUnit                      == 1.6.*
                     , QuickCheck                 == 2.13.*
                     , test-framework             == 0.8.*
                     , test-framework-hunit       == 0.3.*
                     , test-framework-quickcheck2 == 0.3.*

  ghc-options:         -Wall -threaded
